Revert "Merge branch 'develop' of https://github.com/modusplant/backend into MP-618-add-social-account-linking"
This reverts commit aeefb919d9cec1096110f166429cbfb75cad5333, reversing
changes made to 7990fcf29930596264bb03f991a5cd2ee2fa82a4.