@@ -20,7 +20,6 @@ import kr.modusplant.domains.post.usecase.port.repository.*;
 import kr.modusplant.domains.post.usecase.record.ContentProcessRecord;
 import kr.modusplant.domains.post.usecase.record.DraftPostReadModel;
 import kr.modusplant.domains.post.usecase.record.PostSummaryReadModel;
-import kr.modusplant.domains.post.usecase.record.PostSummaryWithSearchInfoReadModel;
 import kr.modusplant.domains.post.usecase.request.PostCategoryRequest;
 import kr.modusplant.domains.post.usecase.request.PostInsertRequest;
 import kr.modusplant.domains.post.usecase.request.PostSearchRequest;
@@ -43,8 +42,6 @@ import java.util.UUID;
 
 import static kr.modusplant.domains.post.common.constant.PostJsonNodeConstant.*;
 import static kr.modusplant.domains.post.common.constant.PostUlidConstant.TEST_POST_ULID;
-import static kr.modusplant.domains.post.common.util.usecase.model.PostWithSearchInfoReadModelTestUtils.TEST_POST_SUMMARY_WITH_SEARCH_INFO_READ_MODEL_NULL;
-import static kr.modusplant.shared.persistence.common.util.constant.CommPostConstant.TEST_COMM_POST_PUBLISHED_AT;
 import static kr.modusplant.shared.persistence.common.util.constant.CommPrimaryCategoryConstant.TEST_COMM_PRIMARY_CATEGORY_ID;
 import static kr.modusplant.shared.persistence.common.util.constant.SiteMemberConstant.MEMBER_BASIC_USER_UUID;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -88,12 +85,12 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class),any(String.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
 
         // when
-        CursorLatestSortedPageResponse<PostSummaryResponse> result = postController.getAll(categoryRequest, memberUuid, ulid, size);
+        CursorPageResponse<PostSummaryResponse> result = postController.getAll(categoryRequest, memberUuid, ulid, size);
 
         // then
         assertThat(result).isNotNull();
         assertThat(result.posts()).hasSize(1);
-        assertThat(result.posts().getFirst().ulid()).isEqualTo(TEST_POST_SUMMARY_READ_MODEL.ulid());
+        assertThat(result.posts().get(0).ulid()).isEqualTo(TEST_POST_SUMMARY_READ_MODEL.ulid());
         assertThat(result.nextUlid()).isNull();
         assertThat(result.hasNext()).isFalse();
 
@@ -102,41 +99,32 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
     }
 
     @Test
-    @DisplayName("키워드로 발행된 게시글을 최신순으로 조회")
-    void testSearchByKeywordWithLatest_givenKeywordAndCursor_willReturnCursorPageResponse() throws IOException {
+    @DisplayName("키워드로 발행된 게시글 조회")
+    void testGetByKeyword_givenKeywordAndCursor_willReturnCursorPageResponse() throws IOException {
         // given
         String keyword = "벌레";
         UUID memberUuid = MEMBER_BASIC_USER_UUID;
         String ulid = TEST_POST_ULID;
         int size = 10;
-        List<PostSummaryWithSearchInfoReadModel> readModels = List.of(TEST_POST_SUMMARY_WITH_SEARCH_INFO_READ_MODEL_NULL);
-        PostSearchRequest searchRequest = new PostSearchRequest(
-                SearchOption.TITLE_CONTENT, keyword, SearchSort.LATEST,
-                new PostCategoryRequest(null, null));
+        List<PostSummaryReadModel> readModels = List.of(TEST_POST_SUMMARY_READ_MODEL);
+        PostSearchRequest searchRequest = new PostSearchRequest(SearchOption.TITLE_CONTENT,keyword,SearchSort.LATEST, new PostCategoryRequest(null,null));
 
-        given(postQueryRepository.searchByKeywordWithLatest(
-                SearchOption.TITLE_CONTENT, keyword, null,null,
-                memberUuid, ulid, TEST_COMM_POST_PUBLISHED_AT, size)).willReturn(readModels);
-        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class), any(String.class)))
-                .willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
-        doNothing().when(postSearchHistoryRepository).saveSearchKeyword(any(UUID.class), any(String.class));
+        given(postQueryRepository.findByKeywordWithCursor(SearchOption.TITLE_CONTENT, keyword, SearchSort.LATEST, null,null, memberUuid, ulid, size)).willReturn(readModels);
+        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class),any(String.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        doNothing().when(postSearchHistoryRepository).saveSearchKeyword(any(UUID.class),any(String.class));
 
         // when
-        CursorRelevanceSortedPageResponse<PostSummaryWithSearchInfoResponse> result =
-                postController.getByKeyword(searchRequest, memberUuid, ulid,
-                        null, null, TEST_COMM_POST_PUBLISHED_AT, size);
+        CursorPageResponse<PostSummaryResponse> result = postController.getByKeyword(searchRequest, memberUuid, ulid, size);
 
         // then
         assertThat(result).isNotNull();
         assertThat(result.posts()).hasSize(1);
-        assertThat(result.posts().getFirst().ulid()).isEqualTo(TEST_POST_ULID);
+        assertThat(result.posts().get(0).ulid()).isEqualTo(TEST_POST_SUMMARY_READ_MODEL.ulid());
         assertThat(result.nextUlid()).isNull();
         assertThat(result.hasNext()).isFalse();
 
-        verify(postQueryRepository).searchByKeywordWithLatest(
-                SearchOption.TITLE_CONTENT, keyword, null,null,
-                memberUuid, ulid, TEST_COMM_POST_PUBLISHED_AT, size);
-        verify(multipartDataProcessorPort).convertToPreview(TEST_POST_CONTENT, TEST_POST_CONTENT_THUMBNAIL_KEY);
+        verify(postQueryRepository).findByKeywordWithCursor(SearchOption.TITLE_CONTENT, keyword, SearchSort.LATEST, null,null, memberUuid, ulid, size);
+        verify(multipartDataProcessorPort).convertToPreview(TEST_POST_SUMMARY_READ_MODEL.content(),TEST_POST_SUMMARY_READ_MODEL.thumbnailPath());
     }
 
     @Test
@@ -611,6 +599,7 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
     @DisplayName("회원 ID와 게스트 ID 모두 주어지지 않았을 때 기존 조회수 반환")
     void testIncreaseViewCount_givenUlid_willReturnCurrentViewCount() {
         // given
+        long ttl = 10L;
         Long currentViewCount = 100L;
 
         given(postViewCountRepository.read(any(PostId.class))).willReturn(currentViewCount);
@@ -631,13 +620,13 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         int page = 1;
         int size = 5;
         long totalElements = 1;
-        Page<PostSummaryReadModel> readModelPage = new PageImpl<>(List.of(TEST_POST_SUMMARY_READ_MODEL), PageRequest.of(0,size),totalElements);
+        Page<PostSummaryReadModel> readModelPage = new PageImpl<>(List.of(TEST_POST_SUMMARY_READ_MODEL), PageRequest.of(page-1,size),totalElements);
 
-        given(postQueryForMemberRepository.findPublishedByAuthMemberWithOffset(any(AuthorId.class), eq(0), eq(size))).willReturn(readModelPage);
+        given(postQueryForMemberRepository.findPublishedByAuthMemberWithOffset(any(AuthorId.class), eq(page-1), eq(size))).willReturn(readModelPage);
         given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class),any(String.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
 
         // when
-        OffsetPageResponse<PostSummaryResponse> result = postController.getByMemberUuid(MEMBER_BASIC_USER_UUID, 0, size);
+        OffsetPageResponse<PostSummaryResponse> result = postController.getByMemberUuid(MEMBER_BASIC_USER_UUID, page-1, size);
 
         // then
         assertThat(result).isNotNull();
@@ -648,7 +637,7 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         assertThat(result.totalPages()).isEqualTo(1);
         assertThat(result.hasNext()).isFalse();
         assertThat(result.hasPrevious()).isFalse();
-        verify(postQueryForMemberRepository).findPublishedByAuthMemberWithOffset(any(AuthorId.class),eq(0),eq(size));
+        verify(postQueryForMemberRepository).findPublishedByAuthMemberWithOffset(any(AuthorId.class),eq(page-1),eq(size));
         verify(multipartDataProcessorPort).convertToPreview(any(JsonNode.class),any(String.class));
     }
 
@@ -659,13 +648,13 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         int page = 1;
         int size = 5;
         long totalElements = 1;
-        Page<DraftPostReadModel> readModelPage = new PageImpl<>(List.of(TEST_DRAFT_POST_READ_MODEL), PageRequest.of(0,size),totalElements);
+        Page<DraftPostReadModel> readModelPage = new PageImpl<>(List.of(TEST_DRAFT_POST_READ_MODEL), PageRequest.of(page-1,size),totalElements);
 
-        given(postQueryForMemberRepository.findDraftByAuthMemberWithOffset(any(AuthorId.class), eq(0),eq(size))).willReturn(readModelPage);
+        given(postQueryForMemberRepository.findDraftByAuthMemberWithOffset(any(AuthorId.class), eq(page-1),eq(size))).willReturn(readModelPage);
         given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class),any(String.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
 
         // when
-        OffsetPageResponse<DraftPostResponse> result = postController.getDraftByMemberUuid(MEMBER_BASIC_USER_UUID, 0, size);
+        OffsetPageResponse<DraftPostResponse> result = postController.getDraftByMemberUuid(MEMBER_BASIC_USER_UUID,page-1,size);
 
         // then
         assertThat(result).isNotNull();
@@ -677,7 +666,7 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         assertThat(result.hasNext()).isFalse();
         assertThat(result.hasPrevious()).isFalse();
 
-        verify(postQueryForMemberRepository).findDraftByAuthMemberWithOffset(any(AuthorId.class), eq(0),eq(size));
+        verify(postQueryForMemberRepository).findDraftByAuthMemberWithOffset(any(AuthorId.class), eq(page-1),eq(size));
         verify(multipartDataProcessorPort).convertToPreview(any(JsonNode.class),any(String.class));
     }
 
@@ -689,11 +678,11 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         int page = 1;
         int size = 5;
 
-        given(postRecentlyViewRepository.getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, 0, size)).willReturn(List.of());
+        given(postRecentlyViewRepository.getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, page-1, size)).willReturn(List.of());
         given(postRecentlyViewRepository.getTotalRecentlyViewPosts(MEMBER_BASIC_USER_UUID)).willReturn(totalElements);
 
         // when
-        OffsetPageResponse<PostSummaryResponse> result = postController.getRecentlyViewByMemberUuid(MEMBER_BASIC_USER_UUID, 0, size);
+        OffsetPageResponse<PostSummaryResponse> result = postController.getRecentlyViewByMemberUuid(MEMBER_BASIC_USER_UUID, page-1, size);
 
         // then
         assertThat(result.posts()).isEmpty();
@@ -701,7 +690,7 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         assertThat(result.page()).isEqualTo(page);
         assertThat(result.size()).isEqualTo(size);
 
-        verify(postRecentlyViewRepository).getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, 0, size);
+        verify(postRecentlyViewRepository).getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID,  page-1, size);
         verify(postRecentlyViewRepository).getTotalRecentlyViewPosts(MEMBER_BASIC_USER_UUID);
         verify(postQueryForMemberRepository, never()).findByIds(anyList(), any(UUID.class));
     }
@@ -716,14 +705,15 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         int size = 5;
 
         List<PostSummaryReadModel> postModels = List.of(TEST_POST_SUMMARY_READ_MODEL, TEST_POST_SUMMARY_READ_MODEL2);
+        List<PostSummaryResponse> postResponses = List.of(TEST_POST_SUMMARY_RESPONSE,TEST_POST_SUMMARY_RESPONSE2);
 
-        given(postRecentlyViewRepository.getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, 0, size)).willReturn(postIds);
+        given(postRecentlyViewRepository.getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, page-1, size)).willReturn(postIds);
         given(postRecentlyViewRepository.getTotalRecentlyViewPosts(MEMBER_BASIC_USER_UUID)).willReturn(totalElements);
         given(postQueryForMemberRepository.findByIds(postIds, MEMBER_BASIC_USER_UUID)).willReturn(postModels);
         given(multipartDataProcessorPort.convertToPreview(TEST_POST_CONTENT, TEST_POST_CONTENT_THUMBNAIL_KEY)).willReturn((ArrayNode) TEST_POST_CONTENT_PREVIEW);
 
         // when
-        OffsetPageResponse<PostSummaryResponse> result = postController.getRecentlyViewByMemberUuid(MEMBER_BASIC_USER_UUID, 0, size);
+        OffsetPageResponse<PostSummaryResponse> result = postController.getRecentlyViewByMemberUuid(MEMBER_BASIC_USER_UUID, page-1, size);
 
         // then
         assertThat(result.posts()).hasSize(2);
@@ -732,7 +722,7 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         assertThat(result.page()).isEqualTo(page);
         assertThat(result.size()).isEqualTo(size);
 
-        verify(postRecentlyViewRepository).getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, 0, size);
+        verify(postRecentlyViewRepository).getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, page-1, size);
         verify(postRecentlyViewRepository).getTotalRecentlyViewPosts(MEMBER_BASIC_USER_UUID);
         verify(postQueryForMemberRepository).findByIds(postIds, MEMBER_BASIC_USER_UUID);
         verify(multipartDataProcessorPort,times(2)).convertToPreview(TEST_POST_CONTENT, TEST_POST_CONTENT_THUMBNAIL_KEY);
@@ -745,13 +735,13 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         int page = 1;
         int size = 5;
         long totalElements = 1;
-        Page<PostSummaryReadModel> readModelPage = new PageImpl<>(List.of(TEST_POST_SUMMARY_READ_MODEL), PageRequest.of(0,size),totalElements);
+        Page<PostSummaryReadModel> readModelPage = new PageImpl<>(List.of(TEST_POST_SUMMARY_READ_MODEL), PageRequest.of(page-1,size),totalElements);
 
-        given(postQueryForMemberRepository.findLikedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID), eq(0), eq(size))).willReturn(readModelPage);
+        given(postQueryForMemberRepository.findLikedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID), eq(page-1), eq(size))).willReturn(readModelPage);
         given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class),any(String.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
 
         // when
-        OffsetPageResponse<PostSummaryResponse> result = postController.getLikedByMemberUuid(MEMBER_BASIC_USER_UUID, 0,size);
+        OffsetPageResponse<PostSummaryResponse> result = postController.getLikedByMemberUuid(MEMBER_BASIC_USER_UUID,page-1,size);
 
         // then
         assertThat(result).isNotNull();
@@ -762,7 +752,7 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         assertThat(result.totalPages()).isEqualTo(1);
         assertThat(result.hasNext()).isFalse();
         assertThat(result.hasPrevious()).isFalse();
-        verify(postQueryForMemberRepository).findLikedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID),eq(0),eq(size));
+        verify(postQueryForMemberRepository).findLikedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID),eq(page-1),eq(size));
         verify(multipartDataProcessorPort).convertToPreview(any(JsonNode.class),any(String.class));
     }
 
@@ -773,13 +763,13 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         int page = 1;
         int size = 5;
         long totalElements = 1;
-        Page<PostSummaryReadModel> readModelPage = new PageImpl<>(List.of(TEST_POST_SUMMARY_READ_MODEL), PageRequest.of(0,size),totalElements);
+        Page<PostSummaryReadModel> readModelPage = new PageImpl<>(List.of(TEST_POST_SUMMARY_READ_MODEL), PageRequest.of(page-1,size),totalElements);
 
-        given(postQueryForMemberRepository.findBookmarkedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID), eq(0), eq(size))).willReturn(readModelPage);
+        given(postQueryForMemberRepository.findBookmarkedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID), eq(page-1), eq(size))).willReturn(readModelPage);
         given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class),any(String.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
 
         // when
-        OffsetPageResponse<PostSummaryResponse> result = postController.getBookmarkedByMemberUuid(MEMBER_BASIC_USER_UUID, 0,size);
+        OffsetPageResponse<PostSummaryResponse> result = postController.getBookmarkedByMemberUuid(MEMBER_BASIC_USER_UUID,page-1,size);
 
         // then
         assertThat(result).isNotNull();
@@ -790,7 +780,7 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         assertThat(result.totalPages()).isEqualTo(1);
         assertThat(result.hasNext()).isFalse();
         assertThat(result.hasPrevious()).isFalse();
-        verify(postQueryForMemberRepository).findBookmarkedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID),eq(0),eq(size));
+        verify(postQueryForMemberRepository).findBookmarkedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID),eq(page-1),eq(size));
         verify(multipartDataProcessorPort).convertToPreview(any(JsonNode.class),any(String.class));
     }
 
